[gd_scene load_steps=2 format=3 uid="uid://dg7wadi4prd3p"]

[ext_resource type="Script" uid="uid://c8awx2wtee0di" path="res://Scenes/UI/Screens/CharacterSelection/CharacterCard.gd" id="1_card"]

[node name="CharacterCard" type="Panel"]
custom_minimum_size = Vector2(220, 300)
offset_right = 220.0
offset_bottom = 300.0
pivot_offset = Vector2(110, 150)
script = ExtResource("1_card")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="PortraitContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Portrait" type="TextureRect" parent="VBoxContainer/PortraitContainer"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "ËßíËâ≤ÂêçÁß∞"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "HP: 100"

[node name="SpeedLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "SPD: 100"

[node name="LockOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="LockLabel" type="Label" parent="LockOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -11.5
offset_right = 30.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "üîí"
horizontal_alignment = 1
vertical_alignment = 1
